Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/Bid_Phase_Assignment__c.object-meta.xml
<CustomObject>
    <label>Bid Phase Assignment</label>
    <nameField>
        <displayFormat>PPA-{0}</displayFormat>
        <label>Assignment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Phase Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>