Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <formula>Assignee__r.Full_Name__c</formula>
    <label>Assignee Name</label>
    <type>Text</type>
</CustomField>