Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Assignment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Summary__c</fullName>
    <formula>Assignee_Name__c &amp; &quot; - &quot; &amp;  TEXT(Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Summary</label>
    <type>Text</type>
</CustomField>