Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Bid_Name__c.field-meta.xml
<CustomField>
    <fullName>Bid_Name__c</fullName>
    <formula>Bid_Phase__r.Bid__r.Name</formula>
    <label>Bid Name</label>
    <type>Text</type>
</CustomField>