Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Bid_Phase__c.field-meta.xml
<CustomField>
    <fullName>Bid_Phase__c</fullName>
    <label>Bid Phase</label>
    <referenceTo>Bid_Phase__c</referenceTo>
    <relationshipLabel>Bid Phase Assignments</relationshipLabel>
    <relationshipName>Planning_Phase_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>