Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Bid_Phase_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Phase_Type__c</fullName>
    <formula>TEXT(Bid_Phase__r.Type__c)</formula>
    <label>Bid Phase Type</label>
    <type>Text</type>
</CustomField>