Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opp Name. Used in Planning Phase Assignment Email Notifications</description>
    <formula>Bid_Phase__r.Opportunity__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>