Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Phase_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_End_Date__c</fullName>
    <formula>Bid_Phase__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase End Date</label>
    <type>Date</type>
</CustomField>