Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Phase_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Start_Date__c</fullName>
    <formula>Bid_Phase__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Start Date</label>
    <type>Date</type>
</CustomField>