Agentforce/force-app/main/default/objects/Bid_Phase_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bid Coordinator</fullName>
            </value>
            <value>
                <fullName>Bid Manager</fullName>
            </value>
            <value>
                <fullName>Bid Writer</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
                <isActive>false</isActive>
                <label>IT</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Operations</fullName>
                <isActive>false</isActive>
                <label>Operations</label>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>